flags, consumers and other API exposed
