# models/role.go
@@ -27,13 +27,13 @@ type RolePost struct {
 // RoleGet model info
 // @Description RoleGet type information
 type RoleGet struct {
-	ID          uint      `gorm:"primaryKey;autoIncrement:true" json:"id,omitempty"`
-	Name        string    `gorm:"not null; unique;" json:"name,omitempty"`
-	Description string    `gorm:"not null; unique;" json:"description,omitempty"`
-	Active      bool      `gorm:"default:true; constraint:not null;" json:"active"`
-	Users       []User    `gorm:"many2many:user_roles; constraint:OnUpdate:CASCADE; OnDelete:CASCADE;" json:"users,omitempty"`
-	Features    []Feature `gorm:"foreignkey:RoleID; constraint:OnUpdate:CASCADE; OnDelete:SET NULL;" json:"features,omitempty"`
-	Pages       []Page    `gorm:"many2many:page_roles; constraint:OnUpdate:CASCADE,OnDelete:CASCADE;" json:"pages,omitempty"`
+	ID          uint          `gorm:"primaryKey;autoIncrement:true" json:"id,omitempty"`
+	Name        string        `gorm:"not null; unique;" json:"name,omitempty"`
+	Description string        `gorm:"not null; unique;" json:"description,omitempty"`
+	Active      bool          `gorm:"default:true; constraint:not null;" json:"active"`
+	AppID       sql.NullInt64 `gorm:"foreignkey:AppID OnDelete:SET NULL" json:"app,omitempty" swaggertype:"number"`
+	Users       []User        `gorm:"many2many:user_roles; constraint:OnUpdate:CASCADE; OnDelete:CASCADE;" json:"users,omitempty"`
+	Features    []Feature     `gorm:"foreignkey:RoleID; constraint:OnUpdate:CASCADE; OnDelete:SET NULL;" json:"features,omitempty"`
 }
 
 // RolePut model info
